# Steering-Wheel-Chassis

./: .gitignore  README.md  robot.code-workspace  robot.ioc
.VSCodeCounter/2026-06-01_17-50-35/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.eide/: eide.yml
Core/Src/: main.c
Only-MCU/: .clangd  STM32H723VGTX_FLASH_USER.ld  robot.code-workspace  robot.ioc
Only-MCU/.eide/: eide.yml
Only-MCU/arm_description/meshes/: arm2_Link.STL  arm3_Link.STL
Only-MCU/arm_description/urdf/: Atlas.urdf
Only-MCU/src/app/: app_runtime.h  app_status.c  app_status.h  entry.h  remote.c  remote.h
Only-MCU/src/infra/: delay.c  delay.h  matrix.c  pid.c
Only-MCU/src/platform/: stm32_hal_bmi088.h  stm32_hal_dwt.h
Only-MCU/src/service/: chassis_yaw_hold.h
arm_description/: package.xml
arm_description/launch/: display.launch  gazebo.launch
arm_description/matlab/: arm_model.m  servo_arm_model.m
arm_description/meshes/: LFd_Link.STL  RRd_Link.STL
arm_description/urdf/: ARM.csv  ARM.urdf
chassis-pc-ws/: .gitignore  README.md  requirements.txt
chassis-pc-ws/scripts/: AtlasTeleop.spec  backend.py  main.py
chassis-pc-ws/scripts/qml/: Main.qml
chassis-pi-ws/: README.md
chassis-pi-ws/src/atlas_mission_interfaces/: CMakeLists.txt  README.md  package.xml
chassis-pi-ws/src/atlas_mission_interfaces/msg/: ManipulationStatus.msg  MissionStatus.msg  NavigationStatus.msg
chassis-pi-ws/src/atlas_mission_interfaces/srv/: DetectCameraTarget.srv  StartManipulation.srv  StartNavigation.srv
chassis-pi-ws/src/atlas_mission_manager/: CMakeLists.txt  README.md  package.xml
chassis-pi-ws/src/atlas_mission_manager/config/: mission_manager.yaml  mission_route.yaml
chassis-pi-ws/src/atlas_mission_manager/include/atlas_mission_manager/: mcu_state_cache.hpp  mission_context.hpp  mission_error.hpp  mission_event.hpp  mission_manager_node.hpp  mission_result_reporter.hpp  mission_state.hpp  safety_controller.hpp
chassis-pi-ws/src/atlas_mission_manager/launch/: mission_manager.launch.py  mission_stack.launch.py
chassis-pi-ws/src/atlas_mission_manager/src/: main.cpp  mcu_state_cache.cpp  mission_manager_node.cpp  mission_result_reporter.cpp  mission_state.cpp  safety_controller.cpp
chassis-pi-ws/src/atlas_nav_pseudo_backend/: README.md  package.xml  setup.cfg  setup.py
chassis-pi-ws/src/atlas_nav_pseudo_backend/atlas_nav_pseudo_backend/: pseudo_nav_backend.py
chassis-pi-ws/src/atlas_nav_pseudo_backend/config/: pseudo_nav.yaml
chassis-pi-ws/src/atlas_nav_pseudo_backend/launch/: pseudo_nav.launch.py
chassis-pi-ws/src/atlas_vision_pollination_backend/: README.md  package.xml  setup.cfg  setup.py
chassis-pi-ws/src/atlas_vision_pollination_backend/atlas_vision_pollination_backend/: camera_target_service.py  vision_pollination_backend.py
chassis-pi-ws/src/atlas_vision_pollination_backend/config/: camera_target.yaml  pollination.yaml  pollination_actions.yaml
chassis-pi-ws/src/atlas_vision_pollination_backend/launch/: vision_pollination.launch.py
chassis-pi-ws/src/handeye_calibration_tool/: README.md  package.xml  setup.cfg  setup.py
chassis-pi-ws/src/handeye_calibration_tool/config/: handeye_tool.yaml
chassis-pi-ws/src/handeye_calibration_tool/handeye_calibration_tool/: handeye_tool.py
chassis-pi-ws/src/handeye_calibration_tool/launch/: handeye_tool.launch.py
chassis-pi-ws/src/mcu_comm_bridge/: CMakeLists.txt  README.md  package.xml
chassis-pi-ws/src/mcu_comm_bridge/config/: mcu_comm_bridge.yaml
chassis-pi-ws/src/mcu_comm_bridge/include/mcu_comm_bridge/: arm_state_codec.hpp  auto_task_latch_tracker.hpp  binary_frame.hpp  mcu_status_codec.hpp  publish_scheduler.hpp  serial_port.hpp
chassis-pi-ws/src/mcu_comm_bridge/launch/: mcu_comm_bridge.launch.py
chassis-pi-ws/src/mcu_comm_bridge/msg/: AutoTaskEvent.msg  McuStatus.msg
chassis-pi-ws/src/mcu_comm_bridge/src/: arm_state_codec.cpp  auto_task_latch_tracker.cpp  binary_frame.cpp  mcu_comm_bridge_node.cpp  mcu_status_codec.cpp  publish_scheduler.cpp  serial_port.cpp
chassis-pi-ws/src/mcu_comm_bridge/srv/: Estop.srv  ReportMissionResult.srv  SetArmJoints.srv  SetArmOrientation.srv  SetArmPose.srv  SetArmPosition.srv  SetYawTarget.srv
chassis_control_code/: .clang-format  README.md  robot.ioc
chassis_control_code/Core/Src/: main.c
chassis_control_code/arm_description/: CMakeLists.txt
chassis_control_code/arm_description/config/: joint_names_Atlas.yaml
chassis_control_code/arm_description/meshes/: LRd_Link.STL  RFd_Link.STL  arm0_Link.STL  arm4_Link.STL  rader_link.STL
chassis_control_code/arm_description/urdf/: Atlas.csv
chassis_control_code/src/app/: app_control.c  app_control.h  app_fsm.c  app_fsm.h  app_runtime.c  app_runtime.h  app_status.c  app_status.h  entry.h
chassis_control_code/src/infra/: README.md  binary_frame.c  binary_frame.h  log.h
chassis_control_code/src/platform/: stm32_hal_can.c  stm32_hal_dwt.c  stm32_hal_exti.c  stm32_hal_exti.h  (+3 more)
competition/: plan.md
docs/: comms_protocol.md
src/app/: app_runtime.c  app_supervisor.c  app_supervisor.h  competition.c  competition.h  entry.c  entry.h  navigation_map.c  navigation_map.h  remote.c  remote.h  task.c  task.h
src/device/: DJI_Motor.c  DJI_Motor.h  DM_Motor.c  DM_Motor.h  chassis.c  chassis.h  fs_ia10b.c  fs_ia10b.h  gw_gray.c  gw_gray.h  jy901.c  jy901.h
src/domain/: steer_wheel_kine.c  steer_wheel_kine.h
src/infra/: delay.h  pid.h  protocol_parser.c  protocol_parser.h
src/platform/: bsp_can.c  bsp_can.h  bsp_debug.c  bsp_debug.h  bsp_led.c  bsp_led.h  stm32_hal_bmi088.c  stm32_hal_bmi088.h  stm32_hal_can.c  stm32_hal_can.h  stm32_hal_exti.c  stm32_hal_exti.h  stm32_hal_light.c  stm32_hal_light.h  stm32_hal_spi.c  stm32_hal_spi.h  stm32_hal_tim.c  stm32_hal_tim.h  stm32_hal_uart.c  stm32_hal_uart.h
src/service/: arm.c  arm.h  asrpro.c  asrpro.h  assemble.c  assemble.h  chassis.c  chassis.h  chassis_yaw_hold.c  line_sensor.c  line_sensor.h  mission.c  mission.h  navigation.c  navigation.h  odom.c  odom.h  remote.c  remote.h  visual_comms.c  visual_comms.h
(+117 files in other folders)
