<?xml version="1.0"?>
<package format="3">
  <name>atlas_nav_pseudo_backend</name>
  <version>0.1.0</version>
  <description>阿特拉斯树莓派任务栈里程计伪导航后端</description>
  <maintainer email="3465219188@qq.com">yangxuan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>atlas_mission_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
