<?xml version="1.0"?>
<package format="3">
    <name>mcu_comm_bridge</name>
    <version>0.2.0</version>
    <description>阿特拉斯树莓派到微控制器二进制协议通信桥</description>
    <maintainer email="kaerei@foxmail.com">Kaede Rei</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rosidl_default_generators</build_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf2_ros</depend>

    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
